--- a/olympic_analysis.ipynb
+++ b/olympic_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -31,7 +31,7 @@
        "(271116, 15)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -58,7 +58,7 @@
        "(222552, 15)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +104,7 @@
        "(206,)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -148,7 +148,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -169,7 +169,7 @@
        "np.int64(1385)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -203,7 +203,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -339,7 +339,7 @@
        "[221167 rows x 3 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -352,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -713,7 +713,7 @@
        "[221167 rows x 20 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -726,7 +726,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -851,7 +851,7 @@
        "[230 rows x 3 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -870,7 +870,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -879,7 +879,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -888,7 +888,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -897,7 +897,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -946,7 +946,7 @@
        "47  India     9       7      12     19"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -957,7 +957,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -967,7 +967,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -976,7 +976,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -985,7 +985,7 @@
        "205"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -999,7 +999,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1015,7 +1015,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1025,7 +1025,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1053,7 +1053,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -1309,7 +1309,7 @@
        "23  2016     0       1       1      2"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1333,7 +1333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -1444,7 +1444,7 @@
        "1   NaN   False  False   False  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1457,7 +1457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -1466,7 +1466,7 @@
        "52"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1477,7 +1477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -1486,7 +1486,7 @@
        "23"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1497,7 +1497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -1506,7 +1506,7 @@
        "630"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1517,7 +1517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -1526,7 +1526,7 @@
        "115525"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1537,7 +1537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1548,7 +1548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -2495,7 +2495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -2504,7 +2504,7 @@
        "<Axes: xlabel='Year', ylabel='Sport'>"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2529,7 +2529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2557,7 +2557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -2676,7 +2676,7 @@
        "9                          Sawao Kato      12    Japan  Gymnastics"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2697,7 +2697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2706,7 +2706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2715,7 +2715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2724,7 +2724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2734,7 +2734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2743,7 +2743,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -3687,7 +3687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3702,7 +3702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -3711,7 +3711,7 @@
        "<Axes: xlabel='Year', ylabel='Sport'>"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 93,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -3732,7 +3732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3752,7 +3752,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -3860,7 +3860,7 @@
        "9        Ranganathan Francis       3  Hockey"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 95,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3871,17 +3871,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 100,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "cannot import name 'figure_factory' from 'plotly.tools' (f:\\Learn Data science\\Olympic Data Visualization - Copy\\venv\\Lib\\site-packages\\plotly\\tools.py)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[100], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# import plotly.figure_factory as ff \u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mplotly\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mtools\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m figure_factory \u001b[38;5;28;01mas\u001b[39;00m ff\n\u001b[0;32m      3\u001b[0m \u001b[38;5;66;03m# import scipy\u001b[39;00m\n",
+      "\u001b[1;31mImportError\u001b[0m: cannot import name 'figure_factory' from 'plotly.tools' (f:\\Learn Data science\\Olympic Data Visualization - Copy\\venv\\Lib\\site-packages\\plotly\\tools.py)"
+     ]
+    }
+   ],
    "source": [
     "import plotly.figure_factory as ff \n",
-    "import scipy"
+    "# from plotly.tools import figure_factory as ff\n",
+    "# import scipy"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3890,7 +3903,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3902,9 +3915,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "f:\\Learn Data science\\Olympic Data Visualization - Copy\\venv\\Lib\\site-packages\\plotly\\tools.py:584: UserWarning:\n",
+      "\n",
+      "plotly.tools.FigureFactory.create_distplot is deprecated. Use plotly.figure_factory.create_distplot\n",
+      "\n"
+     ]
+    },
     {
      "data": {
       "application/vnd.plotly.v1+json": {
